# python-anyconfig

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.txt  LICENSE  MANIFEST.in  NEWS  README.md  README.rst  mypy.ini  package.spec.in  pyproject.toml  python-anyconfig.spec.in  requirements.txt  runtest.sh  setup.cfg  setup.py  tox.ini  wercker.yml
.copr/: Makefile
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  tests-in-centos.yml  tests-in-centos.yml.disabled  tests.yml
anyconfig/: AnyConfig.py  Bunch.py  __init__.py  api.py  backends.py  cli.py  compat.py  cui.py  dicts.py  filter.py  getset.py  globals.py  init.py  inputs.py  ioinfo.py  ioobjects.py  mdicts.py  mergeabledict.py  options.py  parser.py  plugins.py  processors.py  query.py  schema.py  singleton.py  template.py  utils.py
anyconfig/backend/: backends.py  base.py  bson.py  cbor.py  configobj.py  ini.py  ini_.py  json.py  json_.py  msgpack.py  pickle.py  properties.py  properties_.py  shellvars.py  toml.py  xml.py  xml_.py  yaml.py  yaml_.py
anyconfig/models/: processor.py
anyconfig/tests/: 00-cnf.yml  00-scm.yml  00-template-ctx.yml  00.py  10-template-config.yml  AnyConfig.py  Bunch.py  api.py  backends.py  cli.py  common.py  cui.py  globals.py  init.py  lib.py  mergeabledict.py  mod.py  parser.py  schema.py  template.py  utils.py
aux/: entry_points.txt  nose.cfg  pylintrc  runtest.sh  test_requirements-py-2.6.txt  test_requirements.txt
docs/: Makefile  anyconfig_cli.1  api.rst  cli.rst  conf.py  design.rst  hacking.rst  header.rst  index.rst  introduction.rst  requirements.txt  usage.rst
docs/api/: anyconfig.api._dump.rst  anyconfig.api._load.rst  anyconfig.api._open.rst  anyconfig.api.datatypes.rst  anyconfig.api.dump_.rst  anyconfig.api.load_.rst  anyconfig.api.open_.rst  anyconfig.api.rst  anyconfig.api.utils.rst  anyconfig.backend.base.compat.rst  anyconfig.backend.base.datatypes.rst  anyconfig.backend.base.dumpers.rst  anyconfig.backend.base.loaders.rst  anyconfig.backend.base.mixins.rst  anyconfig.backend.base.parsers.rst  anyconfig.backend.base.rst  anyconfig.backend.base.utils.rst  anyconfig.backend.bson.rst  anyconfig.backend.cbor.rst  anyconfig.backend.configobj.rst  anyconfig.backend.ini.configparser.rst  anyconfig.backend.ini.rst  anyconfig.backend.json.common.rst  anyconfig.backend.json.default.rst  anyconfig.backend.json.rst  anyconfig.backend.json.simplejson.rst  anyconfig.backend.json.stdlib.rst  anyconfig.backend.msgpack.rst  anyconfig.backend.pickle.rst  anyconfig.backend.pickle.stdlib.rst  anyconfig.backend.properties.builtin.rst  anyconfig.backend.properties.rst  anyconfig.backend.python.builtin.rst  anyconfig.backend.python.dumper.rst  anyconfig.backend.python.loader.rst  anyconfig.backend.python.rst  anyconfig.backend.rst  anyconfig.backend.sh.rst  anyconfig.backend.sh.variables.rst  anyconfig.backend.shellvars.py  (+59 more)
m9dicts/: __init__.py  api.py  compat.py  dicts.py  globals.py  relations.py  utils.py
m9dicts/tests/: api.py  common.py  dicts.py  relations.py  utils.py
pkg/: copr-build.sh  doc_requirements.txt  entry_points.txt  gen-authors.sh  gen-readme.sh  header.rst  nose.cfg  package.spec.in  pylintrc  requirements_full-py-2.6.txt  requirements_full-py-3.7.txt  requirements_full.txt  rpmbuild-wrapper.sh  runtest.sh  scrutinizer.yml  test_requirements-plugins.txt  test_requirements-py-2.6.txt  test_requirements-py-3.7.txt  test_requirements.txt  test_requirements_min.txt  update-m9dicts-subtree.sh  update-subtree.sh
src/: anyconfg_cli  anyconfg_cui
src/anyconfig/: __init__.py  api.py  backends.py  cli.py  compat.py  dicts.py  globals.py  ioinfo.py  parser.py  processors.py  query.py  schema.py  singleton.py  template.py  types.py  utils.py
tests/: api.py  backends.py  cli.py  common.py  dicts.py  extras.py  filter.py  globals.py  init.py  inputs.py  ioinfo.py  ioobjects.py  lib.py  mod.py  old_common.py  parser.py  processors.py  query.py  requirements.txt  requirements_type-check.txt  schema.py  singleton.py  template-includee.yml  template.py  test_lib.py  test_singleton.py  utils.py
tests/api/: _open.py  main.py  test_utils.py
tests/backend/: base.py  bson.py  cbor.py  common.py  configobj.py  constants.py  ini.py  ini2.py  json.py  msgpack.py  pickle.py  properties.py  shellvars.py  test_ini.py  test_properties.py  test_shellvars.py  test_toml.py  test_xml.py  toml.py  xml.py  yaml.py
tests/base/: __init__.py  collector.py  common.py  constants.py  datasets.py  datatypes.py  test_collector.py  test_utils.py  utils.py
tests/cli/: collector.py  collectors.py  datatypes.py  main.py  test_base.py  test_detectors.py  test_errors.py  test_extra_options.py  test_ignore_missing.py  test_multi_inputs.py  test_no_or_wrong_arguments_or_options.py  test_parse_args.py  test_query.py  test_schema.py  test_schema_generation.py  test_show.py  test_show_env.py  test_show_info.py  test_show_lists.py  test_single_input.py  test_single_input_to_yaml_output.py  test_template.py  test_usage.py
tests/common/: dumper.py  globals_.py  load.py  load_data.py  load_py.py  loader.py  paths.py  tdi.py  tdi_base.py  test_load.py  test_load_data.py  test_load_py.py  test_paths.py  test_tdi.py  test_tdi_base.py
tests/dicts/: common.py  test_functions.py  test_get.py  test_merge.py  test_mk_nested_dic.py
tests/ioinfo/: constants.py  test_detectors.py  test_factory.py  test_functions.py  test_main.py  test_paths.py  test_utils.py
tests/min/: nose.cfg
tests/parser/: common.py  test_attrlist.py  test_attrlist_0.py  test_list.py  test_parse.py  test_single.py
tests/parsers/: parsers.py  test_parsers.py  test_utils.py  utils.py
tests/pkg/: pip_install.bats
tests/processors/: common.py  test_processors.py  test_utils.py  utils.py
tests/query/: query.py  test_query.py
tests/requirements.d/: full.txt  lint.txt  test.txt  type-check.txt
tests/res/: 00-01-cnf.json  00-cnf.json  00-scm.json  00-scm.yml  20-00-cnf.ini  20-00-cnf.json  20-00-cnf.toml  20-00-cnf.xml  20-00-cnf.yml  30-00-cnf.json  30-00-template-cnf-ng-scm.json  (+2 more)
(+936 files in other folders)
