# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[metadata]
name = anyconfig
#version = attr: anyconfig.VERSION
description = Library provides common APIs to load and dump configuration files in various formats
author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = MIT
url = https://github.com/ssato/python-anyconfig
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Developers
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 3
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Environment :: Console
        Operating System :: OS Independent
        Topic :: Software Development :: Libraries :: Python Modules
        Topic :: Text Processing :: Markup
        Topic :: Utilities
        License :: OSI Approved :: MIT License

