# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[metadata]
name = anyconfig
#version = attr: anyconfig.VERSION
description = Library provides common APIs to load and dump configuration files in various formats
long_description =
    python-anyconfig is a MIT licensed python library provides common APIs to
    load and dump configuration files in various formats with some useful
    features such as contents merge, templates, query, schema validation and
    generation support.

    - Home: https://github.com/ssato/python-anyconfig
    - Author: Satoru SATOH <ssato@redhat.com>
    - License: MIT
    - Document: http://python-anyconfig.readthedocs.org/en/latest/
    - Download: PyPI (https://pypi.python.org/pypi/anyconfig) or Copr RPM repos ( https://copr.fedoraproject.org/coprs/ssato/python-anyconfig/)

author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = MIT
url = https://github.com/ssato/python-anyconfig
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:

# minimum dependencies.
install_requires =
    setuptools

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    anyconfig_cli = anyconfig.cli:main

