# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = anyconfig
#version = attr: anyconfig.__version__
description = Library provides common APIs to load and dump configuration files in various formats
project_urls =
    CI: Github Actions = https://github.com/ssato/python-anyconfig/actions
    Download = https://pypi.python.org/pypi/anyconfig
    Download RPMs = https://copr.fedoraproject.org/coprs/ssato/python-anyconfig/
    Documentation = http://python-anyconfig.readthedocs.org
    Bug Tracker = https://github.com/ssato/python-anyconfig/issues
    Source = https://github.com/ssato/python-anyconfig
long_description =
    python-anyconfig is a python library provides common APIs to load and dump
    configuration files in various formats with some useful features such as
    contents merge, templates, query, schema validation and generation support.

    - Home: https://github.com/ssato/python-anyconfig
    - Author: Satoru SATOH <satoru.satoh@gmail.com>
    - License: MIT

author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = MIT
url = https://github.com/ssato/python-anyconfig
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:
package_dir =
        = src

# Disabled because it does not work in CentOS 8.
# [options.data_files]
# share/man/man1 =
#         docs/anyconfig_cli.1

[options.package_data]
anyconfig = py.typed

[options.extras_require]
yaml =
    pyyaml
toml =
    tomli; python_version < "3.11"
    tomli-w
query =
    jmespath
schema =
    jsonschema
template =
    Jinja2

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    anyconfig_cli = anyconfig.cli:main

[flake8]
per-file-ignores =
    tests/res/*/*/*/*.py: W605, B018
    tests/res/*/*/*/*/*.py: W605, B018

max-complexity = 10
select = C,E,F,W,B

# .. seealso:: https://www.flake8rules.com/rules/W504.html
ignore = W503

[tool:pytest]
testpaths =
    tests

python_files =
    test_*.py
    Test*.py

addopts = --cov=src -vv --cov --cov-report xml
